--- a/idldoc/src/resources/idldoc.sty
+++ b/idldoc/src/resources/idldoc.sty
@@ -1,5 +1,6 @@
 \NeedsTeXFormat{LaTeX2e}[1994/06/01]
 
+% Modified from the tufte-common.sty
 \ProvidesPackage{idldoc}[2009/01/01 v1.0.0 Common code for the idldoc style]
 
 %%
