--- a/idldoc/src/resources/idldoc.sty
+++ b/idldoc/src/resources/idldoc.sty
@@ -873,11 +873,11 @@
 \ifthenelse{\boolean{@idldoc@toc}}
   {\titlecontents{chapter}%
     [0em] % distance from left margin
-    {\begin{fullwidth}\fontsize{13pt}{18pt}\selectfont} % above (global formatting of entry)
+    {\vspace{1.0\baselineskip}\begin{fullwidth}\fontsize{13pt}{18pt}\selectfont} % above (global formatting of entry)
     {\contentslabel{2em}\rm\itshape} % before w/label (label = ``Chapter 1'')
     {\rm\itshape} % before w/o label
     {\rm\qquad\thecontentspage} % filler + page (leaders and page num)
-    [\vspace{1.5\baselineskip}\end{fullwidth}] % after
+    [\vspace{0.25\baselineskip}\end{fullwidth}] % after
   }
   {}
 
