--- a/idldoc/src/resources/idldoc.sty
+++ b/idldoc/src/resources/idldoc.sty
@@ -829,7 +829,7 @@
 \renewcommand\section{\@startsection {section}{1}{\z@}%
                                    {-3.5ex \@plus -1ex \@minus -.2ex}%
                                    {2.3ex \@plus.2ex}%
-                                   {\normalfont\large\it}}
+                                   {\normalfont\Large\it}}
 \renewcommand\subsection{\@startsection{subsection}{2}{\z@}%
                                      {-3.25ex\@plus -1ex \@minus -.2ex}%
                                      {1.5ex \@plus .2ex}%
