Editing IDLdoc tutorial.

--- a/docs/idldoc-docs.sty
+++ b/docs/idldoc-docs.sty
@@ -1,8 +1,8 @@
 % setup source listings
 \usepackage{listings}
 \usepackage{textcomp}
-\lstset{language=IDL,upquote=true,showstringspaces=false}
-\lstset{numbers=none, numberstyle=\tiny,numbersep=7pt,xleftmargin=5pt}
+\lstset{upquote=true,showstringspaces=false}
+\lstset{numbers=none, numberstyle=\tiny,numbersep=7pt,xleftmargin=0pt}
 \lstset{basicstyle=\ttfamily,keywordstyle={}}
 
 % no indent, but a bit of space between paragraphs
